<resources>
    <string name="app_name">Quize App</string>
    <string name="true_title">true</string>
    <string name="false_title">false</string>
    <string name="previous_button">previous button</string>
    <string name="next_button">next button</string>
    <string name="quize">Quize</string>
    <string name="counter_questions">0 out of 100</string>
    <string name="correct_anser">Correct</string>
    <string name="wrong_answer">Wrong</string>
</resources>
